examples/test/testpolicy15292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15292
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key17: value4
      key43: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value41
          key49: value14
          key10: value25
      podSelector:
        matchLabels:
          key42: value22
          key36: value21
